Fix safari grid layout bug

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -8,6 +8,15 @@
   overflow: hidden; /* Prevents extra scrolling */
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Prevents global scrolling */
+  height: 100dvh; /* Ensures full-page layout */
+  width: 100vw;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
